# ghost_creator_ai

./: .gitignore  emails.db  listar_emails.py  main.py  requirements.txt
backend/: .gitignore  main.py  pyproject.toml  render.yaml  requirements.txt
frontend/: eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/obrigado/: page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
frontend/src/lib/: adminEmails.ts
