[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "diipdata",email = "diegop.freitas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.1,<0.35.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "email-validator (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
